<resources>
    <string name="app_name">Sensor MQTT Client</string>

    <string name="pref_key_mqtt_broker_host">mqttBrokerHost</string>
    <string name="pref_key_mqtt_broker_port">mqttBrokerPort</string>
    <string name="pref_key_device_id">deviceId</string>
    <string name="pref_key_client_switch">client_switch</string>
    <string name="pref_default_mqtt_host">localhost</string>
    <string name="pref_default_mqtt_port">1883</string>
    <string name="pref_default_device_id">sensor-device</string>
    <string name="title_settings">Settings</string>
    <string name="title_client">Client</string>
    <string name="title_available_sensors">Sensors</string>


    <string name="pref_mqtt_host_dialog_title">Enter MQTT Broker Host</string>
    <string name="pref_mqtt_port_dialog_title">Enter MQTT Broker Port</string>
    <string name="pref_mqtt_port_dialog_message">Enter MQTT Broker Port (typically 1883)</string>
    <string name="pref_device_id_dialog_title">Enter Device ID</string>
    <string name="pref_device_id_dialog_message">Enter unique device identifier for MQTT topics</string>
    <string name="pref_key_sampling_rate">pref_sampling_rate</string>

    <string name="shared_pref_file">shared_pref_file</string>
    <string name="pref_key_localhost">pref_key_localhost</string>
    <string name="pref_key_all_interface">pref_key_all_interface</string>
    <string name="pref_key_hotspot">pref_key_hotspot</string>
    <string name="pref_key_discoverable">pref_key_discoverable</string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>



</resources>