<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditTextPreference
        app:defaultValue="@string/pref_default_mqtt_host"
        app:dialogMessage="Enter MQTT broker hostname or IP address"
        app:dialogTitle="@string/pref_mqtt_host_dialog_title"
        app:key="@string/pref_key_mqtt_broker_host"
        app:title="MQTT Broker Host"
        app:useSimpleSummaryProvider="true"
        app:icon="@drawable/ic_baseline_info_24"
        />

    <EditTextPreference
        app:defaultValue="@string/pref_default_mqtt_port"
        app:dialogMessage="@string/pref_mqtt_port_dialog_message"
        app:dialogTitle="@string/pref_mqtt_port_dialog_title"
        app:key="@string/pref_key_mqtt_broker_port"
        app:title="MQTT Broker Port"
        app:useSimpleSummaryProvider="true"
        app:icon="@drawable/ic_baseline_info_24"
        />

    <EditTextPreference
        app:defaultValue="@string/pref_default_device_id"
        app:dialogMessage="@string/pref_device_id_dialog_message"
        app:dialogTitle="@string/pref_device_id_dialog_title"
        app:key="@string/pref_key_device_id"
        app:title="Device ID"
        app:useSimpleSummaryProvider="true"
        app:icon="@drawable/ic_baseline_info_24"
        />


    <EditTextPreference
        app:defaultValue="200000"
        app:dialogMessage="Enter sampling rate in Microseconds"
        app:dialogTitle="Sampling Rate"
        app:key="@string/pref_key_sampling_rate"
        app:title="Sampling Rate (Microseconds)"
        app:useSimpleSummaryProvider="true"
        app:icon="@drawable/ic_baseline_speed_24"
        />




</PreferenceScreen>